[gd_scene load_steps=6 format=3 uid="uid://ej14fwofw77"]

[ext_resource type="Script" path="res://player.gd" id="1_i3ptd"]
[ext_resource type="Script" path="res://node_2d.gd" id="1_pw8rb"]
[ext_resource type="Script" path="res://score.gd" id="2_0hycl"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_n41dc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fi288"]
size = Vector2(4.84062, 25.9167)

[node name="Main" type="Node2D"]
script = ExtResource("1_pw8rb")

[node name="Player" type="Node2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(50, 360)
script = ExtResource("1_i3ptd")

[node name="TopRigidBody" type="Node2D" parent="Player"]
physics_interpolation_mode = 2
material = SubResource("CanvasItemMaterial_n41dc")
position = Vector2(0, -30)

[node name="ColorRect" type="ColorRect" parent="Player/TopRigidBody"]
offset_left = -3.0
offset_top = -5.0
offset_right = 37.0
offset_bottom = 35.0
scale = Vector2(1, 0.36)

[node name="BottomRigidBody" type="Node2D" parent="Player"]
position = Vector2(0, 30)

[node name="ColorRect3" type="ColorRect" parent="Player/BottomRigidBody"]
offset_left = -3.0
offset_top = -11.0
offset_right = 37.0
offset_bottom = 29.0
scale = Vector2(1, 0.36)

[node name="Score" type="Label" parent="."]
offset_left = 145.0
offset_top = 10.0
offset_right = 1930.0
offset_bottom = 176.0
theme_override_font_sizes/font_size = 61
text = "Current Score: 0 / Max Score: 0"
script = ExtResource("2_0hycl")

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="BetweenObjTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(61, 351.897)
scale = Vector2(11.1556, 28.4679)
shape = SubResource("RectangleShape2D_fi288")
debug_color = Color(0.758692, 0.453419, 1.92523e-07, 0.42)

[connection signal="timeout" from="ScoreTimer" to="Score" method="_on_score_timer_timeout"]
[connection signal="timeout" from="BetweenObjTimer" to="." method="_on_between_obj_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
